<resources>
    <string name="app_name">Geph</string>
    <string name="settings">Settings</string>
    <string name="vpn_toggle_on">ON</string>
    <string name="vpn_toggle_off">OFF</string>
    <string name="secure_network">Secure Network</string>
    <string name="local_service_started" translatable="false">Local Service Created</string>
    <string name="local_service_label" translatable="false">Local Service Label</string>
    <string name="local_service_stopped" translatable="false">Local Service Stopped</string>
    <string name="local_service_connected" translatable="false">Local Service Connected</string>
    <string name="local_service_disconnected" translatable="false">Local Service Disconnected</string>
    <string name="notification_label">Geph</string>
    <string name="username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register</string>
    <string name="prompt_captcha">Captcha Answer</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign Out</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="captcha_answer">Captcha Answer</string>
    <string name="captcha_must_be_answered">Captcha must be answered</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="duplicate_username">Duplicate username</string>
    <string name="geph_service_restarting">Geph is restarting</string>
    <string name="geph_service_started">Starting Geph</string>
    <string name="geph_service_stopped">Stopping Geph</string>
    <string name="incorrect_captcha">Captcha is incorrect</string>
    <string name="missing_field">Missing Field</string>
    <string name="or"> or </string>
    <string name="password_is_required">Password is required</string>
    <string name="please_answer_the_captcha_again">Please answer the captcha</string>
    <string name="please_choose_a_different_username">Please choose a different username</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="refresh_captcha">Refresh</string>
    <string name="registration_description">Creating a new account is easy! Simply fill the following fields and submit to complete the registration.</string>
    <string name="registration_error">Registration Error</string>
    <string name="registration_success_message">Successfully registered a new user</string>
    <string name="sign_in">Sign In</string>
    <string name="unexpected_error_occuured">Unexpected error occurred</string>
    <string name="username_is_required">Username is required</string>
    <string name="no_internet_connection">Cannot start Geph. No internet connection detected.</string>
    <string name="please_check_your_username_and_password">Please check your username and password.</string>
    <string name="invalid_user_credential">Invalid User Credential</string>
    <string name="network">Network</string>
    <string name="selective_proxying_option_title">Avoid proxying P.R. Chinese websites</string>
    <string name="selective_proxying_option_desc">Geph won\'t use its network for those Chinese domestic websites that are accessible without proxying. Changing this option will cause the app to restart the connection.</string>
    <string name="geph_logo" translatable="false">Geph Logo</string>
    <string name="public_ip">Public IP</string>
    <string name="connection">Connection</string>
    <string name="transfer">Transfer</string>
    <string name="balance">Balance</string>
    <string name="geph_preferences">Geph Preferences</string>
    <string name="connected">Connected</string>
    <string name="to_the_geph_network">to the Geph network!</string>
    <string name="access_blocked_sites">Enjoy an uncensored Internet!</string>
    <string name="connecting">Connecting...</string>
    <string name="toggle_the_below_button_to_start_stop_geph">Use the switch to turn on Geph</string>
    <string name="normal">Normal</string>
    <string name="backup">Backup</string>
    <string name="cache_network_info_option_title">Cache network information</string>
    <string name="cache_network_info_option_summary">Enable Geph to cache network information to improve the app performance.</string>
    <string name="debug">Debug</string>
    <string name="update_notification">A new version of Geph is available!</string>
    <string name="download_and_install">Tap to download</string>
    <string name="later">Later</string>
    <string name="plan_type">Plan</string>
    <string name="unlimited">Unlimited</string>
    <string name="free">Free</string>
    <string name="title_activity_billing">Billing</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="buy_plus">Buy unlimited bandwidth</string>
    <string name="manage_account">Manage account</string>
</resources>
