<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_network_settings"
        android:title="@string/network">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_whitelist"
            android:title="@string/selective_proxying_option_title"
            android:summary="@string/selective_proxying_option_desc" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_debug"
        android:title="@string/debug">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_cache"
            android:title="@string/cache_network_info_option_title"
            android:summary="@string/cache_network_info_option_summary" />
    </PreferenceCategory>

</PreferenceScreen>