<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="io.geph.android.MainActivity">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/registration_description"
            android:textSize="16dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/reg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/captcha_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_captcha_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_captcha"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/transparent_border_box"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/captcha_placeholder"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true" />

                <Button
                    android:id="@+id/refresh_captcha"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/captcha_placeholder"
                    android:background="@drawable/refresh_button"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/submit"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/orange_button"
            android:onClick="onRegister"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
