<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_line_height"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp">
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black_light"
                android:textSize="@dimen/status_column_header_font_size"
                android:text="@string/public_ip" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginLeft="@dimen/status_column_value_left_margin">
            <TextView
                android:id="@+id/status_public_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_light"
                android:textSize="@dimen/status_column_value_font_size"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_line_height"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp">
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black_light"
                android:textSize="@dimen/status_column_header_font_size"
                android:text="@string/connection" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginLeft="@dimen/status_column_value_left_margin">
            <TextView
                android:id="@+id/status_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/status_column_value_font_size"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_line_height"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/plan_type"
                android:textColor="@color/black_light"
                android:textSize="@dimen/status_column_header_font_size"
                android:textStyle="bold" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginLeft="@dimen/status_column_value_left_margin">
            <TextView
                android:id="@+id/status_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_light"
                android:textSize="@dimen/status_column_value_font_size"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_line_height"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp">
            <TextView
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black_light"
                android:textSize="@dimen/status_column_header_font_size"
                android:text="@string/balance" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:layout_marginLeft="@dimen/status_column_value_left_margin">
            <TextView
                android:id="@+id/status_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_light"
                android:textSize="@dimen/status_column_value_font_size"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>