<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.geph.android.ui.FeatureFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/vpn_toggle_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="50dp">

            <ToggleButton
                android:id="@+id/vpn_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_button"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/notice_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/vpn_toggle_container"
            android:layout_marginBottom="30dp"
            android:padding="45dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_the_below_button_to_start_stop_geph"
                    android:textSize="@dimen/text_plain" />
            </RelativeLayout>
        </RelativeLayout>

        <!-- TODO factor out the following view as a separate fragment -->
        <RelativeLayout
            android:id="@+id/message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/vpn_toggle_container"
            android:layout_marginBottom="30dp">

            <!--
                Connected message
            -->
            <RelativeLayout
                android:id="@+id/connected_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="35dp"
                android:visibility="gone"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/connected_sign"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/connected" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/connected_sign"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/connected"
                            android:textColor="@color/green"
                            android:textSize="@dimen/text_em"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/access_blocked_sites"
                        android:textSize="@dimen/text_plain" />
                </LinearLayout>
            </RelativeLayout>

            <!--
                Connecting message
            -->
            <RelativeLayout
                android:id="@+id/connecting_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="35dp">

                <ProgressBar
                    android:id="@+id/connecting_progress_bar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="55dp"
                    android:layout_height="55dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/connecting_progress_bar"
                    android:text="@string/connecting"
                    android:textSize="@dimen/text_em" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/status_fragment_container"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_below="@id/vpn_toggle_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">

            <fragment
                android:id="@+id/status_fragment"
                android:name="io.geph.android.ui.ColumnedStatusFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout="@layout/fragment_columned_status" />
        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>
