<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    tools:context="io.geph.android.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:fitsSystemWindows="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/main_toolbar_acc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="24dp"
                app:layout_collapseMode="pin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/ulbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="35dp"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="sans-serif"
                    android:text="@string/manage_account"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:layout_editor_absoluteX="233dp"
                    tools:layout_editor_absoluteY="21dp"
                    tools:textAllCaps="false" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/main_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteY="85dp" />

                <ImageView
                    android:id="@+id/main_toolbar_icon"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:contentDescription="@string/geph_logo"
                    android:padding="10dp"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="96dp"
                    android:layout_height="36dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="11dp"
                    android:layout_toEndOf="@+id/main_toolbar_icon"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_dark"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/black">

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:isScrollContainer="true" />

    <RelativeLayout
        android:id="@+id/main_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_a70"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
